# SQLiteTaskManager

./: .gitignore  README.md  create_table.py  create_tables.sql  delete.py  insert.py  pyproject.toml  seed.py  select.py  update.py
